src/parser/PmmParser.java
// Generated from D:/DLP/DLP_UO277574_2024-25/src/parser/Pmm.g4 by ANTLR 4.13.2
package parser;

    import ast.*;
    import ast.expressions.*;
    import ast.statements.*;
    import ast.program.*;
    import ast.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, WHITE_SPACE=40, ONE_LINE_COMMENT=41, MULTIPLE_LINE_COMMENT=42, 
		ID=43, INT_CONSTANT=44, REAL_CONSTANT=45, CHAR_CONSTANT=46;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_var_definition = 2, RULE_func_definition = 3, 
		RULE_main_function = 4, RULE_type = 5, RULE_build_in_type = 6, RULE_complex_type = 7, 
		RULE_function_type = 8, RULE_type_of_func = 9, RULE_fields = 10, RULE_statement = 11, 
		RULE_func_invocation = 12, RULE_block = 13, RULE_expression = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "var_definition", "func_definition", "main_function", 
			"type", "build_in_type", "complex_type", "function_type", "type_of_func", 
			"fields", "statement", "func_invocation", "block", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "':'", "';'", "'def'", "'{'", "'}'", "'main'", "'int'", 
			"'double'", "'char'", "'['", "']'", "'struct'", "'('", "')'", "'->'", 
			"'None'", "'print'", "'input'", "'='", "'if'", "'else'", "'while'", "'return'", 
			"'.'", "'-'", "'!'", "'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", 
			"'!='", "'=='", "'&&'", "'||'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "WHITE_SPACE", "ONE_LINE_COMMENT", "MULTIPLE_LINE_COMMENT", 
			"ID", "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> dList = new ArrayList<Definition>();
		public DefinitionContext definition;
		public Main_functionContext main_function;
		public Main_functionContext main_function() {
			return getRuleContext(Main_functionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(30);
					((ProgramContext)_localctx).definition = definition();
					 _localctx.dList.addAll(((ProgramContext)_localctx).definition.ast); 
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(38);
			((ProgramContext)_localctx).main_function = main_function();
			 _localctx.dList.add(((ProgramContext)_localctx).main_function.ast); 
			setState(40);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(_localctx.dList); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public Var_definitionContext var_definition;
		public Func_definitionContext func_definition;
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Func_definitionContext func_definition() {
			return getRuleContext(Func_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				((DefinitionContext)_localctx).var_definition = var_definition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).var_definition.ast); 
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				((DefinitionContext)_localctx).func_definition = func_definition();
				 _localctx.ast.add(((DefinitionContext)_localctx).func_definition.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_definitionContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<>();
		public List<Variable> vList = new ArrayList<Variable>();
		public Token id1;
		public Token id2;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			((Var_definitionContext)_localctx).id1 = match(ID);
			 _localctx.vList.add(new Variable(((Var_definitionContext)_localctx).id1.getLine(), ((Var_definitionContext)_localctx).id1.getCharPositionInLine() + 1, (((Var_definitionContext)_localctx).id1!=null?((Var_definitionContext)_localctx).id1.getText():null))); 
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(53);
				match(T__0);
				setState(54);
				((Var_definitionContext)_localctx).id2 = match(ID);
				 _localctx.vList.add(new Variable(((Var_definitionContext)_localctx).id2.getLine(), ((Var_definitionContext)_localctx).id2.getCharPositionInLine() + 1, (((Var_definitionContext)_localctx).id2!=null?((Var_definitionContext)_localctx).id2.getText():null))); 
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(T__1);
			setState(62);
			((Var_definitionContext)_localctx).type = type();
			setState(63);
			match(T__2);

			            for (Variable vb: _localctx.vList) {
			                { _localctx.ast.add(new VariableDefinition(vb.getLine(), vb.getColumn(), vb.getName(), ((Var_definitionContext)_localctx).type.ast)); }
			            }
			            for (int i = 0; i < _localctx.vList.size(); i++) {
			                for (int j = 0; j < _localctx.vList.size(); j++) {
			                    if (_localctx.vList.get(i).getName().equals(_localctx.vList.get(j).getName()) && i!=j) {
			                        new ErrorType(_localctx.vList.get(i), "Variable repetition '" + _localctx.vList.get(i).getName() + "'");
			                    }
			                }
			            }
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_definitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<Statement> stList = new ArrayList<>();
		public Token d;
		public Token id1;
		public Function_typeContext function_type;
		public Var_definitionContext var_definition;
		public StatementContext statement;
		public Function_typeContext function_type() {
			return getRuleContext(Function_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Func_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_definition; }
	}

	public final Func_definitionContext func_definition() throws RecognitionException {
		Func_definitionContext _localctx = new Func_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func_definition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			((Func_definitionContext)_localctx).d = match(T__3);
			setState(67);
			((Func_definitionContext)_localctx).id1 = match(ID);
			setState(68);
			((Func_definitionContext)_localctx).function_type = function_type();
			setState(69);
			match(T__4);
			setState(75);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(70);
					((Func_definitionContext)_localctx).var_definition = var_definition();
					 _localctx.stList.addAll(((Func_definitionContext)_localctx).var_definition.ast); 
					}
					} 
				}
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 131941624725504L) != 0)) {
				{
				{
				setState(78);
				((Func_definitionContext)_localctx).statement = statement();
				 _localctx.stList.addAll(((Func_definitionContext)_localctx).statement.ast); 
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(T__5);
			 ((Func_definitionContext)_localctx).ast =  new FunctionDefinition(((Func_definitionContext)_localctx).d.getLine(), ((Func_definitionContext)_localctx).d.getCharPositionInLine() + 1, (((Func_definitionContext)_localctx).id1!=null?((Func_definitionContext)_localctx).id1.getText():null), ((Func_definitionContext)_localctx).function_type.ast,
			        _localctx.stList); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Main_functionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<Statement> stList = new ArrayList<>();
		public Token d;
		public Token m;
		public Function_typeContext function_type;
		public Var_definitionContext var_definition;
		public StatementContext statement;
		public Function_typeContext function_type() {
			return getRuleContext(Function_typeContext.class,0);
		}
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Main_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_function; }
	}

	public final Main_functionContext main_function() throws RecognitionException {
		Main_functionContext _localctx = new Main_functionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_main_function);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			((Main_functionContext)_localctx).d = match(T__3);
			setState(90);
			((Main_functionContext)_localctx).m = match(T__6);
			setState(91);
			((Main_functionContext)_localctx).function_type = function_type();
			setState(92);
			match(T__4);
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					((Main_functionContext)_localctx).var_definition = var_definition();
					 _localctx.stList.addAll(((Main_functionContext)_localctx).var_definition.ast); 
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 131941624725504L) != 0)) {
				{
				{
				setState(101);
				((Main_functionContext)_localctx).statement = statement();
				 _localctx.stList.addAll(((Main_functionContext)_localctx).statement.ast); 
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(T__5);
			 ((Main_functionContext)_localctx).ast =  new FunctionDefinition(((Main_functionContext)_localctx).d.getLine(), ((Main_functionContext)_localctx).d.getCharPositionInLine() + 1, (((Main_functionContext)_localctx).m!=null?((Main_functionContext)_localctx).m.getText():null), ((Main_functionContext)_localctx).function_type.ast,
			                _localctx.stList); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public Build_in_typeContext build_in_type;
		public Complex_typeContext complex_type;
		public Build_in_typeContext build_in_type() {
			return getRuleContext(Build_in_typeContext.class,0);
		}
		public Complex_typeContext complex_type() {
			return getRuleContext(Complex_typeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case T__8:
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				((TypeContext)_localctx).build_in_type = build_in_type();
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).build_in_type.ast; 
				}
				break;
			case T__10:
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				((TypeContext)_localctx).complex_type = complex_type();
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).complex_type.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Build_in_typeContext extends ParserRuleContext {
		public Type ast;
		public Build_in_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_build_in_type; }
	}

	public final Build_in_typeContext build_in_type() throws RecognitionException {
		Build_in_typeContext _localctx = new Build_in_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_build_in_type);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(T__7);
				 ((Build_in_typeContext)_localctx).ast =  new IntegerType(); 
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(T__8);
				 ((Build_in_typeContext)_localctx).ast =  new DoubleType(); 
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				match(T__9);
				 ((Build_in_typeContext)_localctx).ast =  new CharacterType(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Complex_typeContext extends ParserRuleContext {
		public Type ast;
		public Token INT_CONSTANT;
		public TypeContext type;
		public FieldsContext fields;
		public TerminalNode INT_CONSTANT() { return getToken(PmmParser.INT_CONSTANT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FieldsContext fields() {
			return getRuleContext(FieldsContext.class,0);
		}
		public Complex_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complex_type; }
	}

	public final Complex_typeContext complex_type() throws RecognitionException {
		Complex_typeContext _localctx = new Complex_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_complex_type);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(T__10);
				setState(129);
				((Complex_typeContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				setState(130);
				match(T__11);
				setState(131);
				((Complex_typeContext)_localctx).type = type();
				 ((Complex_typeContext)_localctx).ast =  new ArrayType(LexerHelper.lexemeToInt((((Complex_typeContext)_localctx).INT_CONSTANT!=null?((Complex_typeContext)_localctx).INT_CONSTANT.getText():null)), ((Complex_typeContext)_localctx).type.ast); 
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(T__12);
				setState(135);
				match(T__4);
				setState(136);
				((Complex_typeContext)_localctx).fields = fields();
				setState(137);
				match(T__5);
				 ((Complex_typeContext)_localctx).ast =  new StructType(((Complex_typeContext)_localctx).fields.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_typeContext extends ParserRuleContext {
		public FunctionType ast;
		public List<VariableDefinition> vdList = new ArrayList<>();
		public Token d;
		public Token id1;
		public TypeContext t1;
		public Token id2;
		public TypeContext t2;
		public Type_of_funcContext type_of_func;
		public Type_of_funcContext type_of_func() {
			return getRuleContext(Type_of_funcContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public Function_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_type; }
	}

	public final Function_typeContext function_type() throws RecognitionException {
		Function_typeContext _localctx = new Function_typeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_function_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			((Function_typeContext)_localctx).d = match(T__13);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(143);
				((Function_typeContext)_localctx).id1 = match(ID);
				setState(144);
				match(T__1);
				setState(145);
				((Function_typeContext)_localctx).t1 = type();
				 _localctx.vdList.add(new VariableDefinition(((Function_typeContext)_localctx).d.getLine(),
				            ((Function_typeContext)_localctx).d.getCharPositionInLine() + 1, (((Function_typeContext)_localctx).id1!=null?((Function_typeContext)_localctx).id1.getText():null), ((Function_typeContext)_localctx).t1.ast)); 
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(147);
					match(T__0);
					setState(148);
					((Function_typeContext)_localctx).id2 = match(ID);
					setState(149);
					match(T__1);
					setState(150);
					((Function_typeContext)_localctx).t2 = type();
					 _localctx.vdList.add(new VariableDefinition(((Function_typeContext)_localctx).d.getLine(), ((Function_typeContext)_localctx).d.getCharPositionInLine() + 1,
					            (((Function_typeContext)_localctx).id2!=null?((Function_typeContext)_localctx).id2.getText():null), ((Function_typeContext)_localctx).t2.ast)); 
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(160);
			match(T__14);
			setState(161);
			match(T__15);
			setState(162);
			((Function_typeContext)_localctx).type_of_func = type_of_func();
			setState(163);
			match(T__1);
			 ((Function_typeContext)_localctx).ast =  new FunctionType(((Function_typeContext)_localctx).type_of_func.ast, _localctx.vdList); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_of_funcContext extends ParserRuleContext {
		public Type ast;
		public Build_in_typeContext build_in_type;
		public Build_in_typeContext build_in_type() {
			return getRuleContext(Build_in_typeContext.class,0);
		}
		public Type_of_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_of_func; }
	}

	public final Type_of_funcContext type_of_func() throws RecognitionException {
		Type_of_funcContext _localctx = new Type_of_funcContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type_of_func);
		try {
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__16:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				match(T__16);
				 ((Type_of_funcContext)_localctx).ast =  new VoidType(); 
				}
				break;
			case T__7:
			case T__8:
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				((Type_of_funcContext)_localctx).build_in_type = build_in_type();
				 ((Type_of_funcContext)_localctx).ast =  ((Type_of_funcContext)_localctx).build_in_type.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldsContext extends ParserRuleContext {
		public List<Field> ast = new ArrayList<>();
		public List<Variable> vList = new ArrayList<Variable>();
		public Token id1;
		public Token id2;
		public TypeContext type;
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
	}
